--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@angular/router": "^15.0.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.6.1",
+    "@capacitor/geolocation": "^4.1.0",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
+    "@ng-web-apis/geolocation": "^2.0.0",
+    "haversine-distance": "^1.2.1",
     "ionicons": "^6.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
